2008-09-15  Dean Jackson  <dino@apple.com>

        Reviewed by Tim Hatcher.

        Tests for -webkit-transform
        https://bugs.webkit.org/show_bug.cgi?id=20771

        * transforms/2d/compound-2d-transforms-expected.txt: Added.
        * transforms/2d/compound-2d-transforms.html: Added.
        * transforms/2d/compound-transforms-vs-containers.html: Added.
        * transforms/2d/transform-2d-expected.txt: Added.
        * transforms/2d/transform-2d.html: Added.
        * transforms/2d/transform-accuracy-expected.txt: Added.
        * transforms/2d/transform-accuracy.html: Added.
        * transforms/2d/transform-borderbox.html: Added.
        * transforms/2d/transform-origin-borderbox.html: Added.
        * transforms/2d/resources/transform-test-utils.js: Added.
        * platform/mac/transforms/2d/compound-transforms-vs-containers-expected.txt: Added.
        * platform/mac/transforms/2d/transform-borderbox-expected.txt: Added.
        * platform/mac/transforms/2d/transform-origin-borderbox-expected.txt: Added.

2008-09-15  Dean Jackson  <dino@apple.com>

        Reviewed by Tim Hatcher

        Tests for animations.
        https://bugs.webkit.org/show_bug.cgi?id=20789

        * animations/animation-test-helpers.js: Added.
        * animations/generic-from-to-expected.txt: Added.
        * animations/generic-from-to.html: Added.
        * animations/multiple-animations-expected.txt: Added.
        * animations/multiple-animations.html: Added.
        * animations/multiple-keyframes-expected.txt: Added.
        * animations/multiple-keyframes.html: Added.

2008-09-15  Anders Carlsson  <andersca@apple.com>

        Reviewed by Maciej.
        
        <rdar://problem/6163988> 
        https://bugs.webkit.org/show_bug.cgi?id=20457
        Canvas: createPattern crashes WebKit in WTF::RefPtr<WebCore::Image>::operator!() const + 9 with a 1D pattern
        
        Add test for createPattern where the canvas passed in has a zero height/width.
        