@@ -2,6 +2,17 @@
 
         Reviewed by Tim Hatcher.
 
+        Add default constructor for ShadowData
+        https://bugs.webkit.org/show_bug.cgi?id=20757
+
+        Test: transitions/shadow.html
+
+        * rendering/style/RenderStyle.h:
+
+2008-09-15  Dean Jackson  <dino@apple.com>
+
+        Reviewed by Tim Hatcher.
+
         RenderStyle should update keyframes.
         http://bugs.webkit.org/show_bug.cgi?id=20756
 
