@@ -2,6 +2,16 @@
 
         Reviewed by Tim Hatcher.
 
+        Test default constructor for ShadowData with transitions.
+        https://bugs.webkit.org/show_bug.cgi?id=20757
+
+        * transitions/shadow-expected.txt: Added.
+        * transitions/shadow.html: Added.
+
+2008-09-15  Dean Jackson  <dino@apple.com>
+
+        Reviewed by Tim Hatcher.
+
         Tests for -webkit-transform
         https://bugs.webkit.org/show_bug.cgi?id=20771
 
